# creating-an-open-source-project-in-python-3085072

./: .gitignore
.devcontainer/: devcontainer.json
os_in_python/: pyproject.toml  reminder.py  tests.py
