[tool.poetry]
name = "os-in-python"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["datttrian <datttrian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
