[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["datttrian <datttrian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
